Updated Java to 15, Added parameterized tests, added tests with Toxiproxy for error conditions got the idempotence test working